my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ESYNTAX_multiassign/T_ESYNTAX_multiassign-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ESYNTAX_MULTIASSIGN_STRUCT_H
#define T_ESYNTAX_MULTIASSIGN_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ESYNTAX_multiassign(void);


#endif /* not T_ESYNTAX_MULTIASSIGN_STRUCT_H */
